--- a/WeCare/logintosite/templates/login.html
+++ b/WeCare/logintosite/templates/login.html
@@ -1,6 +1,76 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Sign In</title>
+        {% load static %}
+        <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
+        <link rel="stylesheet" href="{% static 'logintosite/css/login.css' %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        <style>
+                body
+                {
+
+                    font-size: 18px;
+                    font-family: 'Times New Roman', Times, serif;
+                }
+                .navbar 
+                {
+                    margin-bottom: 0;
+                    border-radius: 0;
+                    background-color: black;
+                }
+        </style>
+    </head>
+    <body style="background-image: url('{% static 'logintosite/images/background.png' %}')";>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <!--<li class="active"><img src="logo.png" width="10%" height="10%"></li>-->
+                        <li class="active"><a href="{% url 'homepage' %}">Home</a></li>
+                        <li class="active"><a href="#">Services</a></li>
+                        <li class="active"><a href="#">FAQ's</a></li>
+                        <li class="active"><a href="#">Corona Virus Updates</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container text-center">
+            <div class="col-sm-12 text-left"> 
+                <div class=" container-fluid box">
+                    <center>
+                        <form action="/logintosite/authentication/" method="POST">{% csrf_token %}>
+                            <br>
+                            <img src="{% static 'home/images/logo.png' %}"><br><br><br>
+                            <div class="heading"><b><i>Sign In</i></b></div>
+                            {% if msg %}
+                            <h4 style="color:#990000;">*{{msg}}</h4>
+                            {% endif %}
+                            <input type='email' id="username" name="email" placeholder="emailID" required><br><br>
+                            <input type='password' id="password" name="password" placeholder="Password" required><br>
+                            <button id="login" name="login" type="submit">Login</button><br>
+                            <a href="#">Forget Password</a><br><br><br><br>
+                        </form>
+                    </center>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    </body>
+</html>
+
+
+<!--<!DOCTYPE html>
+<html>
+    <head>
         <title>Login</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -33,5 +103,5 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </body>
-</html>
+</html>-->
 
