--- a/WeCare/home/templates/index.html
+++ b/WeCare/home/templates/index.html
@@ -6,9 +6,7 @@
         <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-       <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
         <link rel="stylesheet" type="text/css" href="{% static 'home/css/home.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -47,7 +45,7 @@
                     <img src="{% static 'home/images/check.png' %}" class="img-fluid"><br>
                     <h3 style="color: #55AB7F;">Our trusted symptom checker is written and reviewed by well know physicans and medicine practicioners.</br>
                     Find a possible diagnosis by entering your symptoms and answering some simple questions.</h3><br>
-                    <a href="#"><button type="button" class="btn btn-success active" style="width: 50%;">GO TO OUR SYMPTOM CHECKER</button></a><br><br><br>
+                    <a href="/home/gotosearch/"><button type="button" class="btn btn-success active" style="width: 50%;">GO TO OUR SYMPTOM CHECKER</button></a><br><br><br>
             </div>
           </div>
           <div>
