--- a/WeCare/home/templates/admin_home.html
+++ b/WeCare/home/templates/admin_home.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <title>Home</title>
@@ -17,7 +16,7 @@
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home/doctorhome">Home</a></li>
+                    <li class="active"><a href="/home/adminhome">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
@@ -30,43 +29,31 @@
             <div class="row slideanim">
               <div class="col-sm-6">
                 <span class="glyphicon glyphicon-plus logo-small"></span>
-                <h4>ADD NEW DISEASE</h4>
-                <p><a href="/Diseases/getdiseaseinfo/">Insert About A New Disease</a></p>
+                <h4>ADD NEW HOSPITAL</h4>
+                <p><a href="/hospital/gethospitalinfo/">Add A New Hospital</a></p>
               </div>
               <div class="col-sm-6">
                 <span class="glyphicon glyphicon-new-window logo-small"></span>
                 <h4>MODIFY INFORMATION</h4>
-                <p><a href="/Diseases/viewdiseases/">Modify existing information</a></p>
+                <p><a href="/hospital/viewhospital/">Modify existing information</a></p>
               </div>
             </div><br><br><br>
 
             <div class="row slideanim">
               <div class="col-sm-6">
                 <span class="	glyphicon glyphicon-search logo-small"></span>
-                <h4>SEARCH DISEASES</h4>
-                <p><a href="{% url 'searchpage' %}">Search Diseases </a></p>
+                <h4>SEARCH HOSPITAL</h4>
+                <p><a href="/hospital/gethospital">Search Hospital </a></p>
               </div>
               
               <div class="col-sm-6">
                 <span class="glyphicon glyphicon-trash logo-small"></span>
-                <h4>DELETE A DISEASE</h4>
-                <p><a href="/Diseases/viewdiseases">Delete Existing Diseases</a></p>
+                <h4>DELETE HOSPITAL</h4>
+                <p><a href="/hospital/viewhospital">Delete Hospital</a></p>
               </div>
             </div><br><br><br>
 
-            <div class="row slideanim">
-              <div class="col-sm-6 ">
-                <span class="glyphicon glyphicon-user logo-small"></span>
-                <h4>YOUR PROFILE</h4>
-                <p><a href="#">View Your Profile</a></p>
-              </div>
-             
-              <div class="col-sm-6 ">
-                <span class="glyphicon glyphicon-th logo-large"></span>
-                <h4>FIND OTHER DOCTORS</h4>
-                <p><a href="#">View Other Profiles</a></p>
-              </div>
             </div>
           </div>  
     </body>
-    </html>
+</html>
