--- a/WeCare/home/templates/index.html
+++ b/WeCare/home/templates/index.html
@@ -6,17 +6,20 @@
         <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-       <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
         <link rel="stylesheet" type="text/css" href="{% static 'home/css/home.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
-    </head>
+        <style>
+          .dsearch{
+            margin: 0%;
+            background-color:#ccffff ;
+          }
+        </style>
+      </head>
     <body>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -26,7 +29,7 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/covid19Data/getcoronaupdates/">Corona Virus Updates</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="/registration/getregsdetails/">Register</a></li>
@@ -36,10 +39,7 @@
             </div>
           </nav> 
           <div>
-              <img  class="img-fluid" src="{% static 'home/images/home.png' %}" width="100%" height="400px">
-              <div>
-                <button class="btn btn-success" type="button" onclick="location.href='/home/news/'">News Feed</button>
-              </div>
+              <img  class="img-fluid" src="{% static 'home/images/home.png' %}" width="100%">
           </div>
           <div class="text-center">
             <div class="symptom">
@@ -48,6 +48,27 @@
                     <h3 style="color: #55AB7F;">Our trusted symptom checker is written and reviewed by well know physicans and medicine practicioners.</br>
                     Find a possible diagnosis by entering your symptoms and answering some simple questions.</h3><br>
                     <a href="#"><button type="button" class="btn btn-success active" style="width: 50%;">GO TO OUR SYMPTOM CHECKER</button></a><br><br><br>
+            </div>
+          </div>
+          <div class="text-center">
+            <div class="dsearch">
+              <img src="{%static 'home/images/dsearch.png' %}" class="img-fluid" style="height: 250px; width: 250px;">
+              <h1 style="color:	 #004d4d"><b><i>Want to know about a disease?</i></b></h1>
+              <h3 style="color:  #009999">Learn more about a disease from our large bank of information.<br>
+              The data is written and reviewed by well known medicine practicioners and physicans.</h3><br>
+              <a href="Diseases/homesearch/"><button type="button" class="btn btn-primary active" style="width: 50%; font-size: 18px;">SEARCH DISEASE</button></a><br><br>
+            </div>
+          </div>
+          <div class="text-center">
+            <div class="symptom">
+                    <h1><b><i>Find a hospital near you!</i></b></h1></br>
+                    <img src="{% static 'home/images/hospital.png' %}" class="img-fluid" style="height:200px; width:200px;"><br>
+                    <h3 style="color: #55AB7F;">Enter a location and find all the hospitals located in that area.</h3><br>
+                    <form action="/home/hospitalsearch" method="GET">
+                      <input type="text" name="search" placeholder="Enter Location" style="width:400px; height:40px; padding:0px; margin: 0px; display: inline;">
+                      <button type="submit" style="background-color:#16AF5F; height:40px; padding:0px; margin: 0px; display: inline; width:200px">Find Hospitals</button>
+                    </form>
+                    <br><br><br>
             </div>
           </div>
           <div>
@@ -70,3 +91,21 @@
           </footer>
     </body>
 </html>
+<!--<!DOCTYPE html>
+<html>
+    <head>
+        <title>WeCare-Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    </head>
+    <body>
+        <p style="text-align: center;" class="display-3 text-highlight">WeCare</p>
+        <a class="btn btn-outline-primary" href="/covid19Data/getcoronaupdates/">CoronavirusUpdates</a>
+        <a style="float: right;" class="btn btn-outline-primary" href="/logintosite/login/">Login</a>
+        <a style="float: right;" class="btn btn-outline-primary" href="/registration/getregsdetails/">Sign Up</a><br/><br/>
+       
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    </body>
+</html>-->
