doctor profile+newsfeed added and changes in covid19 module done

--- a/WeCare/home/templates/index.html
+++ b/WeCare/home/templates/index.html
@@ -29,7 +29,8 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getcoronaupdates/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/home/news/">News Feed</a></li>
+                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="/registration/getregsdetails/">Register</a></li>
@@ -47,7 +48,7 @@
                     <img src="{% static 'home/images/check.png' %}" class="img-fluid"><br>
                     <h3 style="color: #55AB7F;">Our trusted symptom checker is written and reviewed by well know physicans and medicine practicioners.</br>
                     Find a possible diagnosis by entering your symptoms and answering some simple questions.</h3><br>
-                    <a href="#"><button type="button" class="btn btn-success active" style="width: 50%;">GO TO OUR SYMPTOM CHECKER</button></a><br><br><br>
+                    <a href="/home/gotosearch/"><button type="button" class="btn btn-success active" style="width: 50%;">GO TO OUR SYMPTOM CHECKER</button></a><br><br><br>
             </div>
           </div>
           <div class="text-center">
