--- a/WeCare/Diseases/templates/adddiseaseinfo.html
+++ b/WeCare/Diseases/templates/adddiseaseinfo.html
@@ -12,7 +12,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
-    <body style="background-image: url('{% static 'logintosite/images/background.png' %}')">
+    <body style="background-image: url('{% static 'logintosite/images/background.png' %}');">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
