--- a/WeCare/hospital/templates/updatehospitalinfo.html
+++ b/WeCare/hospital/templates/updatehospitalinfo.html
@@ -29,8 +29,8 @@
                 {% if msg1 %}
                    <h3 style="color: red; align-content: center;text-align: center;">{{msg1}}</h3>
                 {% endif %}<br>
-                {% for d in dis %}
-                    <form action="/hospital/updatehospitalinfo" method="post">{% csrf_token %}
+                {% if hosp %}
+                    <form action="/hospital/updatehospitalinfo/" method="post">{% csrf_token %}
                         <table class="table">
                             <tr>
                                 <td>Name:</td>
@@ -53,10 +53,10 @@
                                 <td><input type="text" name="timings" value="{{hosp.timings}}" required></td>
                             </tr>
                         </table>
-                        <center><button type="submit">Update Details</button></center>
+                        <center><input type="submit" value="Update Details"/></center>
                         <br><br>
                     </form>
-                {% endfor %}
+                {% endif %}
             </div>
         </div>
     </body>
