--- a/WeCare/hospital/templates/viewhospital.html
+++ b/WeCare/hospital/templates/viewhospital.html
@@ -19,7 +19,7 @@
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home/doctorhome">Home</a></li>
+                    <li class="active"><a href="/home/adminhome">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
