--- a/WeCare/home/templates/hospitalsearch.html
+++ b/WeCare/home/templates/hospitalsearch.html
@@ -20,8 +20,7 @@
                     <li class="active"><a href="/home">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/home/news/">News Feed</a></li>
-                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
                 </ul>
         </nav>
         <div class="container-fluid outterbox center-text ">
