--- a/WeCare/home/templates/profile.html
+++ b/WeCare/home/templates/profile.html
@@ -21,8 +21,7 @@
                     <li class="active"><a href="{% url 'homepage' %}">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/home/news/">News Feed</a></li>
-                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="#">Corona Virus Updates</a></li>
                 </ul>
         </nav>
         <div><br><br><br><br><br><br><br></div>
