--- a/WeCare/home/templates/admin_home.html
+++ b/WeCare/home/templates/admin_home.html
@@ -16,7 +16,7 @@
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home/adminhome/">Home</a></li>
+                    <li class="active"><a href="/home/adminhome">Home</a></li>
                     <li class="active"><a href="#">Services</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
@@ -43,7 +43,7 @@
               <div class="col-sm-6">
                 <span class="	glyphicon glyphicon-search logo-small"></span>
                 <h4>SEARCH HOSPITAL</h4>
-                <p><a href="{% url 'hospitalsearch' %}">Search Hospital </a></p>
+                <p><a href="/hospital/gethospital">Search Hospital </a></p>
               </div>
               
               <div class="col-sm-6">
