--- a/WeCare/home/templates/news.html
+++ b/WeCare/home/templates/news.html
@@ -6,18 +6,16 @@
         <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-       <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
         <link rel="stylesheet" type="text/css" href="{% static 'home/css/home.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
+        <link rel="stylesheet" type="text/css" href="{% static 'home/css/news.css' %}">
     </head>
-    <body>
+    <body style="background-image: url('{% static 'logintosite/images/background.png' %}')">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
@@ -28,29 +26,30 @@
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="/registration/getregsdetails/">Register</a></li>
-                    <li class="active"><a href="/logintosite/login/">Sign In</a></li>
-                </ul>
               </div>
             </div>
           </nav> 
-	<div class="container"> 
-	{% for new, des,con, i, u in mylist %} 
-			<img src="{{ i }}" alt="Sorry for trouble, currently image is not available..." width="20%" height="40%"> 
-			<h1>title:</h1> {{ new }} 
-			{{ value|linebreaks }} 
-
-			<h3><b>description:</b></h3>{{ des }} 
-			{{ value|linebreaks }}
-			
-			<!-- <h4>content:</h4>{{ con }} 
-			{{ value|linebreaks }} -->
-			<a href="{{u}}">Click here to read full article</a>
-			{{ value|linebreaks }}
-			<br/>
-			<br/>
-	{% endfor %} 
+          <br><br>
+	<div class="container box"> 
+    <table >
+        {% for new, des,con, i, u in mylist %} 
+        <tr>
+                <td>
+                    <h2>{{ new }} 
+                        {{ value|linebreaks }}
+                    </h2>
+                    <h4>{{ des }} 
+                        {{ value|linebreaks }}
+                    </h4>
+                    <a href="{{u}}" target="_blank">Read The Full Article Here</a>
+                        {{ value|linebreaks }}
+                </td>
+                <td>
+                    <img src="{{ i }}" alt="Sorry for trouble, currently image is not available." width="200px" height="200px">
+                </td>
+        </tr>
+        {% endfor %} 
+    </table>
 	</div> 
 
 </body> 
