view and update profile issue is resolved.

--- a/WeCare/home/templates/index.html
+++ b/WeCare/home/templates/index.html
@@ -77,9 +77,9 @@
                 <ul class="nav navbar-nav">
                     <!--<li class="active"><img src="logo.png" width="10%" height="10%"></li>-->
                     <li class="active"><a href="/home/">Home</a></li>
-                    <li class="active"><a href="news/">News</a></li>
+                    <li class="active"><a href="/home/news/">News</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getcoronaupdates/">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="/registration/getregsdetails/">Register</a></li>
@@ -106,7 +106,7 @@
               <h1 style="color:	 #004d4d"><b><i>Want to know about a disease?</i></b></h1>
               <h3 style="color:  #009999">Learn more about a disease from our large bank of information.<br>
               The data is written and reviewed by well known medicine practicioners and physicans.</h3><br>
-              <a href="Diseases/homesearch/"><button type="button" class="btn btn-primary active" style="width: 50%; font-size: 18px;">SEARCH DISEASE</button></a><br><br>
+              <a href="/Diseases/homesearch/"><button type="button" class="btn btn-primary active" style="width: 50%; font-size: 18px;">SEARCH DISEASE</button></a><br><br>
             </div>
           </div>
           <div class="text-center">
