--- a/WeCare/home/templates/news.html
+++ b/WeCare/home/templates/news.html
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <!--<li class="active"><img src="logo.png" width="10%" height="10%"></li>-->
                     <li class="active"><a href="{% url 'homepage' %}">Home</a></li>
-                    <li class="active"><a href="#">Services</a></li>
+                    <li class="active"><a href="#">News</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
                 </ul>
