--- a/WeCare/home/templates/admin_home.html
+++ b/WeCare/home/templates/admin_home.html
@@ -16,10 +16,13 @@
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/home/adminhome">Home</a></li>
-                    <li class="active"><a href="#">Services</a></li>
+                    <li class="active"><a href="/home/adminhome/">Home</a></li>
+                    <li class="active"><a href="/home/news/">News</a></li>
                     <li class="active"><a href="#">FAQ's</a></li>
-                    <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
+                    <li class="active"><a href="/covid19Data/getoption/">Corona Virus Updates</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="/logintosite/logout/">Logout</a></li>
                 </ul>
         </nav>
         <div><br><br><br><br><br><br><br></div>
@@ -43,7 +46,7 @@
               <div class="col-sm-6">
                 <span class="	glyphicon glyphicon-search logo-small"></span>
                 <h4>SEARCH HOSPITAL</h4>
-                <p><a href="/hospital/gethospital">Search Hospital </a></p>
+                <p><a href="{% url 'hospitalsearch' %}">Search Hospital </a></p>
               </div>
               
               <div class="col-sm-6">
