--- a/WeCare/home/templates/doctor_home.html
+++ b/WeCare/home/templates/doctor_home.html
@@ -22,6 +22,9 @@
                     <li class="active"><a href="#">FAQ's</a></li>
                     <li class="active"><a href="/covid19Data/getcoronaupdates">Corona Virus Updates</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li class="active"><a href="/logintosite/logout">Logout</a></li>
+                </ul>
         </nav>
         <div><br><br><br><br><br><br><br></div>
 
@@ -64,7 +67,7 @@
               <div class="col-sm-6 ">
                 <span class="glyphicon glyphicon-th logo-large"></span>
                 <h4>FIND OTHER DOCTORS</h4>
-                <p><a href="#">View Other Profiles</a></p>
+                <p><a href="/home/viewprofiles/">View Other Doctor Profiles</a></p>
               </div>
             </div>
           </div>  
