issue in hospital address resolved.

--- a/WeCare/hospital/templates/addhospitalinfo.html
+++ b/WeCare/hospital/templates/addhospitalinfo.html
@@ -43,7 +43,7 @@
                         </tr>
                         <tr>
                             <td>Address</td>
-                            <td><textarea rows="5" cols="50" name="hopital_address" placeholder="Address" required></textarea></td>
+                            <td><textarea rows="5" cols="50" name="hospital_address" placeholder="Address" required></textarea></td>
                         </tr>
                         <tr>
                             <td><br><br></td>
