--- a/WeCare/Diseases/templates/viewdiseases.html
+++ b/WeCare/Diseases/templates/viewdiseases.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{% static 'Diseases/css/view.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
@@ -34,6 +36,7 @@
                             <th>Description</th>
                             <th></th>
                             <th></th>
+                            <th></th>
                         </tr>
                         {% for d in diseases %}
                             <tr>
@@ -42,14 +45,23 @@
                                 <td width="17%">{{d.Symptoms}}</td>
                                 <td width="17%">{{d.Cause}}</td>
                                 <td width="40%">{{d.Description}}</td>
+                                <td width="5.5%">
+                                    <form action="/Diseases/gettreatmentdetails/" method="GET">
+                                        <input type="hidden" name="dname" value="{{d.name}}">  
+                                        <button type="submit" onclick="location.href='/Diseases/gettreatmentdetails/'">View Treatment</button>
+                                    </form>
+                                </td>
                                 <td width="6%">
                                     <form action="/Diseases/getupdateinfo/" method="GET">
                                         <input type="hidden" name="dname" value="{{d.name}}">    
                                         <button type="submit" onclick="location.href='/Diseases/getupdateinfo/'">Modify Details</button>
                                     </form>
                                 </td>
-                                <td width="6%">    
-                                        <button type="submit" onclick="location.href='/Diseases/viewdiseases/'">Delete Disease</button>
+                                <td width="6%">
+                                    <form action="/Diseases/deletedisease/" method="GET">
+                                        <input type="hidden" name="dname" value="{{d.name}}">     
+                                        <button type="submit" onclick="location.href='/Diseases/deletedisease/'">Delete Disease</button>
+                                    </form>
                                 </td>
                             </tr>
                         {% endfor %}
